--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,6 +29,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>9.15.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -97,6 +102,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>0x9_StellerVoyage_Api</finalName>
     </build>
 
 </project>
