--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '11'  # Adjust this as needed
+          java-version: '17'  # Adjust this as needed
 
       - name: Build and tag Docker image
         working-directory: backend  # Navigate to the 'backend' subfolder
@@ -29,8 +29,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERUSERNAME }}
+          password: ${{ secrets.DOCKERPASSWORD }}
 
       - name: Push Docker image
         run: docker push madman98/0x9stellervoyage:latest
@@ -38,9 +38,9 @@ jobs:
       - name: Deploy to DigitalOcean Droplet
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.DROPLET_IP }}
-          username: ${{ secrets.DROPLET_SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ secrets.DROPLETIP }}
+          username: ${{ secrets.DROPLETSSHUSER }}
+          key: ${{ secrets.SSHPRIVATEKEY }}
           script: |
             docker stop backend-api || true
             docker rm backend-api || true
