--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "react-native": "0.72.3",
     "react-native-animatable": "^1.3.3",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
