--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master  # Adjust this to your default branch
-    paths:
-      - 'backend/**'  # Only trigger on changes in the 'backend' subfolder
+    # paths:
+    #   - 'backend/**'  # Only trigger on changes in the 'backend' subfolder
 
 jobs:
   deploy:
@@ -14,12 +14,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'  # Adjust this as needed
-
+        
       - name: Build and tag Docker image
         working-directory: backend  # Navigate to the 'backend' subfolder
         run: |
