--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: 11  # Adjust to your project's JDK version
+          distribution: 'adopt'
+          java-version: '11'  # Adjust to your project's JDK version
 
       - name: Build JAR
         run: mvn clean package -DskipTests=true
