--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-animatable": "^1.3.3",
+    "react-native-confirmation-code-field": "^7.3.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "4.6.3",
