--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
