--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.4.0",
     "expo": "^49.0.3",
